Versió  4.0 Acaba les puntuacions i colors, i el mov. de la pala?

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="arkanoid.css"  />
     </head>
     <body>
+        <div id="puntuaciones"></div>
         <canvas id="game">
             Tu navagador no soporta "canvas". cámbialo!!!!!!!
         </canvas>
